Bug 255712 - "Thumbnail Aside" effect visible when screen is locked -- privacy issue
Summary: "Thumbnail Aside" effect visible when screen is locked -- privacy issue
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 4.11
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/108...
Keywords:
: 314927 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-31 02:58 UTC by Alexander Potashev
Modified: 2020-08-05 20:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-10-31 02:58:54 UTC
Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

1. enable "Thumbnail Aside" effect
2. activate the effect for one of the windows
3. lock screen. The thumbnail does not hide.

Similar issue: https://bugs.kde.org/show_bug.cgi?id=179924

Reproducible: Always
Comment 1 Martin Flöser 2010-12-18 12:55:45 UTC
Confirmed and not surprising: the thumbnail is always rendered. The effect needs to know when the screen is locked.

It has nothing to do with #179924
Comment 2 Martin Flöser 2013-02-07 09:23:47 UTC
Git commit bee4a6b15454e99469bfa17900cf5c0bdbc4ad5e by Martin Gräßlin.
Committed on 30/01/2013 at 13:07.
Pushed by graesslin into branch 'master'.

Notify effects when the screen gets locked

EffectsHandlerImpl starts to monitor DBus for the screen being locked and
provides this information to the Effect system by allowing them to ask
whether the screen is currently locked and by emitting a signal when the
screen gets locked/unlocked.

This information is needed to ensure that no private data is shown on the
screen. The following effects are adjusted:
* taskbar thumbnails
* thumbnail aside
* mouse mark
* screen shot
FIXED-IN: 4.11
REVIEW: 108670

M  +2    -0    kwin/CMakeLists.txt
M  +103  -0    kwin/effects.cpp
M  +29   -1    kwin/effects.h
M  +15   -1    kwin/effects/mousemark/mousemark.cpp
M  +1    -0    kwin/effects/mousemark/mousemark.h
M  +1    -1    kwin/effects/screenshot/screenshot.cpp
M  +9    -1    kwin/effects/taskbarthumbnail/taskbarthumbnail.cpp
M  +1    -0    kwin/effects/taskbarthumbnail/taskbarthumbnail.h
M  +2    -1    kwin/effects/thumbnailaside/thumbnailaside.cpp
M  +1    -1    kwin/effects/thumbnailaside/thumbnailaside.h
M  +18   -0    kwin/libkwineffects/kwineffects.h

http://commits.kde.org/kde-workspace/bee4a6b15454e99469bfa17900cf5c0bdbc4ad5e
Comment 3 Thomas Lübking 2013-02-15 15:01:52 UTC
*** Bug 314927 has been marked as a duplicate of this bug. ***
Comment 4 Squeaky Pancakes 2020-08-05 20:36:33 UTC
This looks its like broken again in 5.19.4