effects.cpp
@@ -45,6 +45,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include <QFile>
 #include <QtCore/QFutureWatcher>
 #include <QtCore/QtConcurrentRun>
+#include <QDBusServiceWatcher>
+#include <QDBusPendingCallWatcher>
 
 #include "kdebug.h"
 #include "klibrary.h"
@@ -60,9 +62,103 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "composite.h"
 #include "xcbutils.h"
 
+// dbus generated
+#include "screenlocker_interface.h"
+
 
 namespace KWin
 {
+
+static const QString SCREEN_LOCKER_SERVICE_NAME = QString("org.freedesktop.ScreenSaver");
+
+ScreenLockerWatcher::ScreenLockerWatcher(QObject *parent)
+    : QObject(parent)
+    , m_interface(NULL)
+    , m_serviceWatcher(new QDBusServiceWatcher(this))
+    , m_locked(false)
+{
+    connect(m_serviceWatcher, SIGNAL(serviceOwnerChanged(QString,QString,QString)), SLOT(serviceOwnerChanged(QString,QString,QString)));
+    m_serviceWatcher->setWatchMode(QDBusServiceWatcher::WatchForOwnerChange);
+    m_serviceWatcher->addWatchedService(SCREEN_LOCKER_SERVICE_NAME);
+    // check whether service is registered
+    QFutureWatcher<QDBusReply<bool> > *watcher = new QFutureWatcher<QDBusReply<bool> >(this);
+    connect(watcher, SIGNAL(finished()), SLOT(serviceRegisteredQueried()));
+    connect(watcher, SIGNAL(canceled()), watcher, SLOT(deleteLater()));
+    watcher->setFuture(QtConcurrent::run(QDBusConnection::sessionBus().interface(),
+                                         &QDBusConnectionInterface::isServiceRegistered,
+                                         SCREEN_LOCKER_SERVICE_NAME));
+}
+
+ScreenLockerWatcher::~ScreenLockerWatcher()
+{
+}
+
+void ScreenLockerWatcher::serviceOwnerChanged(const QString &serviceName, const QString &oldOwner, const QString &newOwner)
+{
+    Q_UNUSED(oldOwner)
+    if (serviceName != SCREEN_LOCKER_SERVICE_NAME) {
+        return;
+    }
+    delete m_interface;
+    m_interface = NULL;
+    m_locked = false;
+    if (!newOwner.isEmpty()) {
+        m_interface = new OrgFreedesktopScreenSaverInterface(newOwner, QString(), QDBusConnection::sessionBus(), this);
+        connect(m_interface, SIGNAL(ActiveChanged(bool)), SLOT(setLocked(bool)));
+        QDBusPendingCallWatcher *watcher = new QDBusPendingCallWatcher(m_interface->GetActive(), this);
+        connect(watcher, SIGNAL(finished(QDBusPendingCallWatcher*)), SLOT(activeQueried(QDBusPendingCallWatcher*)));
+    }
+}
+
+void ScreenLockerWatcher::serviceRegisteredQueried()
+{
+    QFutureWatcher<QDBusReply<bool> > *watcher = dynamic_cast<QFutureWatcher<QDBusReply<bool> > *>(sender());
+    if (!watcher) {
+        return;
+    }
+    const QDBusReply<bool> &reply = watcher->result();
+    if (reply.isValid() && reply.value()) {
+        QFutureWatcher<QDBusReply<QString> > *ownerWatcher = new QFutureWatcher<QDBusReply<QString> >(this);
+        connect(ownerWatcher, SIGNAL(finished()), SLOT(serviceOwnerQueried()));
+        connect(ownerWatcher, SIGNAL(canceled()), ownerWatcher, SLOT(deleteLater()));
+        ownerWatcher->setFuture(QtConcurrent::run(QDBusConnection::sessionBus().interface(),
+                                                  &QDBusConnectionInterface::serviceOwner,
+                                                  SCREEN_LOCKER_SERVICE_NAME));
+    }
+    watcher->deleteLater();
+}
+
+void ScreenLockerWatcher::serviceOwnerQueried()
+{
+    QFutureWatcher<QDBusReply<QString> > *watcher = dynamic_cast<QFutureWatcher<QDBusReply<QString> > *>(sender());
+    if (!watcher) {
+        return;
+    }
+    const QDBusReply<QString> reply = watcher->result();
+    if (reply.isValid()) {
+        serviceOwnerChanged(SCREEN_LOCKER_SERVICE_NAME, QString(), reply.value());
+    }
+
+    watcher->deleteLater();
+}
+
+void ScreenLockerWatcher::activeQueried(QDBusPendingCallWatcher *watcher)
+{
+    QDBusPendingReply<bool> reply = *watcher;
+    if (!reply.isError()) {
+        setLocked(reply.value());
+    }
+    watcher->deleteLater();
+}
+
+void ScreenLockerWatcher::setLocked(bool activated)
+{
+    if (m_locked == activated) {
+        return;
+    }
+    m_locked = activated;
+    emit locked(m_locked);
+}
 
 //---------------------
 // Static
@@ -112,6 +208,7 @@ EffectsHandlerImpl::EffectsHandlerImpl(Compositor *compositor, Scene *scene)
     , mouse_poll_ref_count(0)
     , m_compositor(compositor)
     , m_scene(scene)
+    , m_screenLockerWatcher(new ScreenLockerWatcher(this))
 {
     new EffectsAdaptor(this);
     QDBusConnection dbus = QDBusConnection::sessionBus();
@@ -144,6 +241,7 @@ EffectsHandlerImpl::EffectsHandlerImpl(Compositor *compositor, Scene *scene)
 #ifdef KWIN_BUILD_SCREENEDGES
     connect(ScreenEdges::self(), SIGNAL(approaching(ElectricBorder,qreal,QRect)), SIGNAL(screenEdgeApproaching(ElectricBorder,qreal,QRect)));
 #endif
+    connect(m_screenLockerWatcher, SIGNAL(locked(bool)), SIGNAL(screenLockingChanged(bool)));
     // connect all clients
     foreach (Client *c, ws->clientList()) {
         setupClientConnections(c);
@@ -1534,6 +1632,11 @@ QString EffectsHandlerImpl::supportInformation(const QString &name) const
         }
     }
     return QString();
+}
+
+bool EffectsHandlerImpl::isScreenLocked() const
+{
+    return m_screenLockerWatcher->isLocked();
 }
 
 //****************************************
